prject framework design done