@@ -6,11 +6,197 @@
 
     <groupId>com.nysoftusa</groupId>
     <artifactId>Project_TDD_WebAutomationFramework_MultiModule_QE_Summer_2021</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>Amazon</module>
+        <module>Atnt</module>
+        <module>BankOfAmerica</module>
+        <module>Cigna</module>
+        <module>DeltaAirlines</module>
+        <module>Ebay</module>
+        <module>Expedia</module>
+        <module>Geico</module>
+        <module>Generic</module>
+        <module>UnitedHealthCare</module>
+        <module>Verizon</module>
+    </modules>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
+    <dependencyManagement>
+
+        <dependencies>
+            <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>4.1.1</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-server</artifactId>
+                <version>4.0.0-alpha-2</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>7.4.0</version>
+                <!--           <scope>test</scope>-->
+            </dependency>
+
+            <!-- Excel Configuration Dependency-->
+
+            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>5.1.0</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>5.1.0</version>
+            </dependency>
+
+            <!-- Database Configuration Dependency-->
+            <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>8.0.27</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongo-java-driver</artifactId>
+                <version>3.12.10</version>
+            </dependency>
+
+            <!-- Extent Reports for Reporting purpose Configuration Dependency-->
+
+            <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+            <dependency>
+                <groupId>com.aventstack</groupId>
+                <artifactId>extentreports</artifactId>
+                <version>5.0.9</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+            <dependency>
+                <groupId>com.relevantcodes</groupId>
+                <artifactId>extentreports</artifactId>
+                <version>2.41.2</version>
+            </dependency>
+
+            <!-- Others purpose Configuration Dependency-->
+            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.12.0</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.11.0</version>
+            </dependency>
+        </dependencies>
+
+    </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+
+            <plugins>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>11</source>
+                        <target>11</target>
+                        <!--                    <release>16</release>-->
+                        <fork>true</fork>
+                        <compilerArgs>
+                            <!--                            If JDK 11 then comment below line-->
+                            <!--                                                <arg>&#45;&#45;enable-preview</arg>-->
+                            <arg>-Xlint:all</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+                        </compilerArgs>
+                        <!--for unmappable characters in classes-->
+                        <encoding>UTF-8</encoding>
+                        <showDeprecation>true</showDeprecation>
+                        <showWarnings>true</showWarnings>
+                        <!--for lombok annotations to resolve-->
+                        <!--contradictory to maven, intelliJ fails with this-->
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>1.18.16</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M5</version>
+
+                    <configuration>
+                        <!-- TestNG http Error Handle purpose -->
+                        <systemPropertyVariables>
+                            <testng.dtd.http>true</testng.dtd.http>
+                        </systemPropertyVariables>
+                        <!-- Test Fail will be Ignored -->
+                        <testFailureIgnore>true</testFailureIgnore>
+                        <!--Test Runner Files-->
+                        <suiteXmlFiles>
+<!--                            <suiteXmlFile>target/test-classes/AmazonTestRunner.xml</suiteXmlFile>-->
+<!--                            <suiteXmlFile>target/test-classes/AtntTestRunner.xml</suiteXmlFile>-->
+<!--                            <suiteXmlFile>target/test-classes/BankOfAmericaTestRunner.xml</suiteXmlFile>-->
+<!--                            <suiteXmlFile>target/test-classes/CignaTestRunner.xml</suiteXmlFile>-->
+<!--                            <suiteXmlFile>target/test-classes/DeltaAirlinesTestRunner.xml</suiteXmlFile>-->
+                            <suiteXmlFile>target/test-classes/EbayTestRunner.xml</suiteXmlFile>
+<!--                            <suiteXmlFile>target/test-classes/ExpediaTestRunner.xml</suiteXmlFile>-->
+<!--                            <suiteXmlFile>target/test-classes/GeicoTestRunner.xml</suiteXmlFile>-->
+<!--                            <suiteXmlFile>target/test-classes/UnitesHealthCareTestRunner.xml</suiteXmlFile>-->
+<!--                            <suiteXmlFile>target/test-classes/VerizonTestRunner.xml</suiteXmlFile>-->
+
+                        </suiteXmlFiles>
+
+                    </configuration>
+
+                </plugin>
+
+            </plugins>
+
+        </pluginManagement>
+    </build>
+
 
 </project>
